# muxspace

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  build_appimage.sh  build_flatpak.sh  feature.txt
config/: workspace.example.yaml
crates/muxspace/: Cargo.toml
crates/muxspace/src/: detect.rs  lib.rs  main.rs  orchestrator.rs  types.rs
crates/muxspace/src/ansi/: mod.rs
crates/muxspace/src/pty/: mod.rs
crates/muxspace/src/state/: mod.rs
crates/muxspace/src/tui/: layout.rs  mod.rs  render.rs
dioxus/: Cargo.toml  README.md
dioxus/flatpak/: com.muxspace.Muxspace.metainfo.xml
dioxus/src/: main.rs
dioxus/src/browser/: mod.rs
dioxus/src/sync/: mod.rs
flatpak/: com.muxspace.Muxspace.desktop  com.muxspace.Muxspace.yml
gui/public/: app.js  index.html  style.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: lib.rs  main.rs
src/: hotkeys.rs
src/browser/: cookies.rs  extensions.rs  profile.rs
src/components/: hotkey_editor.rs  mod.rs  project_nav.rs  sidebar.rs  terminal.rs
src/pty/: mod.rs
src/state/: mod.rs
