[package]
name = "muxspace"
version = "0.3.0"
edition = "2021"
description = "A native terminal workspace manager built with Rust and Dioxus Desktop"
license = "MIT"
repository = "https://github.com/InSelfControll/muxspace"

[dependencies]
# Dioxus - Native WebView UI
dioxus = { version = "0.5", features = ["desktop"] }
dioxus-desktop = { version = "0.5", features = ["transparent"] }

# Terminal & PTY
portable-pty = "0.8"
vte = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Database
sled = "0.34"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# System & Process
nix = { version = "0.27", features = ["process", "signal"] }
dirs = "5"
shellexpand = "3"
which = "6"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = "0.4"

# Native file dialogs
rfd = "0.15"

# System
libc = "0.2"

# GTK + WebKit — embed real browser WebViews inside the app window via GtkOverlay
glib = { version = "0.20", features = ["v2_68"] }
gtk = "0.18"
gdk = "0.18"
webkit2gtk = { version = "2.0", features = ["v2_22"] }

# Browser profile integration — import cookies & detect extensions
rusqlite = { version = "0.31", features = ["bundled"] }
glob = "0.3"

# Chrome cookie decryption (v10 PBKDF2+AES-CBC)
aes = "0.8"
cbc = "0.1"
pbkdf2 = { version = "0.12", features = ["hmac"] }
sha1 = "0.10"

[features]
default = []
