[package]
name = "muxspace"
version = "0.1.0"
edition = "2021"

[lib]
name = "muxspace"
path = "src/lib.rs"

[[bin]]
name = "muxspace"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Terminal UI
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }

# Async utilities
futures = "0.3"

# PTY support
portable-pty = "0.8"

# ANSI parsing
vte = "0.13"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# System/process utilities
nix = { version = "0.27", features = ["signal", "process"] }

# Paths and directories
dirs = "5"
dirs-next = "2"
shellexpand = "3"

# CLI
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
which = "6"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
