[package]
name = "muxspace-gui"
version = "0.1.0"
edition = "2021"

[lib]
name = "muxspace_gui_lib"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "muxspace-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"

# Re-use muxspace core
muxspace = { path = "../../crates/muxspace" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
